# network_labs

./: .gitignore  README.md
lab_1/: CMakeLists.txt  main.cpp  receiver.cpp  receiver.h  sender.cpp  sender.h
lab_2/client/: CMakeLists.txt  Client.cpp  Client.h  ConnectManager.cpp  ConnectManager.h  FTProtocolStrategy.cpp  FTProtocolStrategy.h  FileReader.cpp  FileReader.h  ProtocolStrategy.h  clientMain.cpp
lab_2/server/: CMakeLists.txt  ConnectManager.cpp  ConnectManager.h  FileWriter.cpp  FileWriter.h  ServerWorkerI.h  Worker.cpp  Worker.h  serverMain.cpp
lab_3/: CMakeLists.txt  imagemodel.cpp  imagemodel.h  loader.h  main.cpp  searchbtnmodel.cpp  searchbtnmodel.h  tablemodel.cpp  tablemodel.h
lab_4/: CMakeLists.txt
lab_4/src/: BornStrategyStd.cpp  CommandExecutor.cpp  CommandExecutor.h  Commands.cpp  CommandsQueue.cpp  CommandsQueue.h  Field.h  FindPlaceStrategyStd.h  FoodDistributor.cpp  FoodDistributor.h  KillStrategyStd.cpp  NetMember.cpp  NetMember.h  NetMemberState.h  Player.cpp  Player.h  Snake.cpp  Snake.h  snakes.pb.cc  snakes.pb.h  snakes.proto
lab_4/src/engine/: BornStrategyStd.cpp  BornStrategyStd.h  CommandExecutor.cpp  CommandExecutor.h  Commands.h  ConfigReader.cpp  ConfigReader.h  EatStrategyStd.cpp  EatStrategyStd.h  Field.cpp  FindPlaceStrategyStd.cpp  FoodDistributor.cpp  FoodDistributor.h  KillStrategyStd.h  Launcher.cpp  Launcher.h  MoveStrategies.h  OfflinePlayer.cpp  OfflinePlayer.h  OnlinePlayer.cpp  OnlinePlayer.h  Player.cpp  Player.h  PlayersList.cpp  PlayersList.h  Snake.cpp  Snake.h  StepStrategyStd.cpp  StepStrategyStd.h
lab_4/src/model/: FieldState.cpp  FieldState.h  GamesListState.cpp  GamesListState.h  PlayersListState.cpp  PlayersListState.h
lab_4/src/net/: ConnectionsList.cpp  ConnectionsList.h  DeputyState.cpp  DeputyState.h  MasterState.cpp  MasterState.h  MulticastReceiver.cpp  MulticastReceiver.h  NetMember.cpp  NetMember.h  NetMemberState.cpp  NetMemberState.h  NormalState.cpp  NormalState.h  UDPNetworkEnd.cpp  UDPNetworkEnd.h  ViewerState.cpp  ViewerState.h
lab_4/tests/: gameEngineTests.cpp
lab_5/: README.md  client.c  dns_resolve.c  mySocks5Proxy.c  mysocks  proxy.c  test.c  testClient  testMultiplexor  tpr.c
lab_7/: CMakeLists.txt
snake/: .clang-tidy  CMakeLists.txt
snake/src/: CMakeLists.txt  main.cpp
snake/src/engine/: BornStrategyStd.cpp  BornStrategyStd.h  CMakeLists.txt  CommandExecutor.cpp  CommandExecutor.h  Commands.cpp  Commands.h  CommandsQueue.cpp  CommandsQueue.h  ConfigKeeper.cpp  ConfigKeeper.h  EatStrategyStd.cpp  EatStrategyStd.h  Field.cpp  Field.h  FindPlaceStrategyStd.cpp  FindPlaceStrategyStd.h  FoodDistributor.cpp  FoodDistributor.h  KillStrategyStd.cpp  KillStrategyStd.h  Launcher.cpp  Launcher.h  MoveStrategies.h  Player.cpp  Player.h  PlayersList.cpp  PlayersList.h  PlayersListObserver.h  Snake.cpp  Snake.h  StepStrategyStd.cpp  StepStrategyStd.h
snake/src/proto/: CMakeLists.txt  snakes.pb.h
snake/tests/: CMakeLists.txt
snake/tests/engine/: BornStrategyTests.cpp  CommandsTests.cpp  ConfigKeeperTests.cpp  EatStrategyTests.cpp  FieldTests.cpp  FindPlaceStrategyTests.cpp  FoodDistributorTests.cpp  KillStrategyTests.cpp  PlayersListTests.cpp  SnakeTests.cpp  StepStrategyTests.cpp
snake_gui/: CMakeLists.txt  main.cpp  recovery.txt  resources.qrc
test_gui/guiApp/: CMakeLists.txt  Main.qml  SessionPage.qml  main.cpp
untitled/: Makefile  compile_commands.json  main.c
